# TrafficSandbox

./: .gitignore  Dockerfile  README.md  app.py  build.sh  config.py  install.sh  pyproject.toml  requirements.txt  simulator.py
actor/: base.py
actor/control/: __init__.py  vehicle_control.py
actor/signal/: __init__.py  traffic_light.py
actor/static/: __init__.py  base.py  traffic_cone.py
actor/vehicle/: __init__.py  base.py  bicycle_normal.py  lincoln_mkz.py  lincoln_mkz_lgsvl.py
actor/walker/: __init__.py  base.py  pedestrian_normal.py
common/: data_structure.py  rpc_utils.py  timer.py  utils.py
docs/: api_reference.md  architecture.md  usage_guide.md
map_toolkit/: __init__.py  crosswalk.py  junction.py  map_converter.py  map_manager.py  road_lane.py  stop_sign.py  traffic_light.py  waypoint.py
map_toolkit/data/SanFrancisco/: map.pickle
map_toolkit/data/borregas_ave/: map.json  map.pickle
registry/: __init__.py  register.py  root.py  utils.py
static/css/: style.css
static/js/: actor.js  info.js  listener.js  map.js  socket.js  traffic_light.js  view_state.js
templates/: index.html
tests/: basic_test.py  rpc_client.py  run_all.sh  seed_test.py  test_actors.py  test_connection.py  test_frontend_debug.py  test_map.py  test_scenario.py
